--- a/frames/package.json
+++ b/frames/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.9.5",
+    "ethers": "^5.7",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "alchemy-sdk": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
