--- a/frames/package.json
+++ b/frames/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.9.5",
+    "alchemy-sdk": "^3.1.0",
     "ethers": "^5.7",
     "next": "14.1.0",
+    "node-cron": "^3.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "alchemy-sdk": "^3.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
